--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -78,7 +78,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=
+javafx.main.class=com.vernanda.MainApp
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
@@ -113,3 +113,4 @@ source.encoding=UTF-8
 src.java.dir=src\\main\\java
 src.res.dir=src\\main\\res
 test.src.dir=test
+compile.on.save.unsupported.jaxws=true
